--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Swathy Farms</title>
-		<style>
-			body {
-				margin: 0;            /* Reset default margin */
-			}
-			iframe {
-				display: block;       /* iframes are inline by default */
-				background: #000;
-				border: none;         /* Reset default border */
-				height: 100vh;        /* Viewport-relative units */
-				width: 100vw;
-			}
-		</style>
-	</head>
-	<body>
-	<iframe loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJsZhJVWY7BDsRAX0yPDCYSXk&key=AIzaSyCiffPI6Jy4T-Ifm_QoN3mYsLq9tAWKo7E"></iframe>
-	</body>
+
+<head>
+	<title>Swathy Farms</title>
+	<style>
+		/* body {
+			margin: 0;
+		}
+
+		iframe {
+			display: block;
+			background: #000;
+			border: none;
+			height: 100vh;
+			width: 100vw;
+		} */
+
+		#map {
+			height: 100%;
+		}
+		html,
+		body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+	</style>
+</head>
+
+<body>
+	<div id="map"></div>
+	<script src="./assets/app.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiffPI6Jy4T-Ifm_QoN3mYsLq9tAWKo7E&callback=initMap&v=weekly" defer></script>
+</body>
+
 </html>
