--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div id="map"></div>
-	<script src="./assets/app.js"></script>
+	<script src="./assets/app.js?cachebuster=1"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiffPI6Jy4T-Ifm_QoN3mYsLq9tAWKo7E&callback=initMap&v=weekly" defer></script>
 </body>
 
